--- a/proj.win32/HelloCpp.vcxproj.filters
+++ b/proj.win32/HelloCpp.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\Classes\MyScene.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\MyActionScene.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -36,6 +39,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\MyScene.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\MyActionScene.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
