--- a/proj.win32/HelloCpp.vcxproj.filters
+++ b/proj.win32/HelloCpp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\Classes\MyActionScene.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\SpritesStorageLayer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -42,6 +45,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\MyActionScene.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\SpritesStorageLayer.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
