--- a/proj.win32/HelloCpp.vcxproj.filters
+++ b/proj.win32/HelloCpp.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="..\Classes\容器测试场景.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\普通小兵.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\单体攻击小兵.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -54,6 +60,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\容器测试场景.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\普通小兵.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\单体攻击小兵.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
