--- a/proj.win32/HelloCpp.vcxproj
+++ b/proj.win32/HelloCpp.vcxproj
@@ -155,6 +155,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\MyScene.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\SpritesStorageLayer.cpp" />
+    <ClCompile Include="..\Classes\单体攻击小兵.cpp" />
+    <ClCompile Include="..\Classes\普通小兵.cpp" />
     <ClCompile Include="..\Classes\容器测试场景.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -164,6 +166,8 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\MyActionScene.h" />
     <ClInclude Include="..\Classes\MyScene.h" />
     <ClInclude Include="..\Classes\SpritesStorageLayer.h" />
+    <ClInclude Include="..\Classes\单体攻击小兵.h" />
+    <ClInclude Include="..\Classes\普通小兵.h" />
     <ClInclude Include="..\Classes\容器测试场景.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
